test/spec_vectors/type-subtyping/fail/module_70.wat
(module (type $a (sub (array (ref any)))) (type $b (sub $a (array (mut (ref any))))))